# mythos-skill

./: .gitignore  LICENSE  README.md  SKILL.md  driver.mjs  install.ps1  install.sh  munin-fork-plan.md  mythos-agent-policy.json  package.json  refiner.md  solver.md
.github/workflows/: ci.yml
mythos-compiler/: Cargo.toml  README.md
mythos-compiler/schemas/: decision_log_record.schema.json  next_pass_packet.schema.json  promotion_record.schema.json  snapshot.schema.json
mythos-compiler/src/: lib.rs  schema.rs
mythos-compiler/src/compiler/: artifacts.rs  contradictions.rs  evidence.rs  journal.rs  lookup.rs  mod.rs  packets.rs  promotion.rs  run_dir.rs  signals.rs  snapshot.rs  trust.rs
mythos-compiler/tests/: compile_determinism.rs
mythos-compiler/tests/fixtures/run-basic/: manifest.json  task.md
mythos-compiler/tests/fixtures/run-basic/raw/: notes.md
mythos-compiler/tests/fixtures/run-basic/verifier-results/: findings.jsonl
mythos-compiler/tests/fixtures/run-basic/worker-results/: evidence.jsonl
scripts/: ingest-subagent.mjs  readiness.mjs  scrub-self-state.mjs  strict-gate.mjs
skills/claude/: SKILL.md  install.ps1  install.sh
skills/codex/: SKILL.md  install.ps1  install.sh
tests/: packet_shape_integrity.test.js
