[package]
name = "mythos-skill"
version = "0.1.0"
edition = "2024"
authors = ["inchwormz <johnrichardmckeown@gmail.com>"]
description = "Explicit-state recurrent synthesis: deterministic packet compiler for AI agent runs. Takes subagent output (evidence.jsonl, verifier findings, raw artifacts) and compiles a schema-validated, hash-provenanced next-pass packet that Prime can reason over without consuming raw subagent prose."
license = "MIT"
repository = "https://github.com/inchwormz/mythos-skill"
homepage = "https://github.com/inchwormz/mythos-skill"
documentation = "https://docs.rs/mythos-skill"
readme = "README.md"
keywords = ["ai", "agents", "determinism", "provenance", "compiler"]
categories = ["command-line-utilities", "development-tools"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "mythos"
path = "src/bin/mythos.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
